Added report, ReadMe and last week of project

--- a/connect_to_nodes/get_node_urls.ipynb
+++ b/connect_to_nodes/get_node_urls.ipynb
@@ -1,12 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Nodes URLS\n",
+    "We get the nodes URLS from the ripple API"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import socket \n",
+    "import csv\n",
     "from ripple_api import RippleDataAPIClient"
    ]
   },
@@ -31,7 +40,7 @@
     "i = 0\n",
     "while i < nb_nodes :\n",
     "    try:\n",
-    "        ips.append(topology['nodes'][i]['ip'])\n",
+    "        ips.append(topology['nodes'][i]['ip']) #get IP address of nodes\n",
     "        i += 1\n",
     "    except KeyError:\n",
     "        i += 1"
@@ -1017,7 +1026,7 @@
     "urls = []\n",
     "for x in ips:\n",
     "    try:\n",
-    "        urls.append(socket.gethostbyaddr(x)[0])\n",
+    "        urls.append(socket.gethostbyaddr(x)[0]) # get URL\n",
     "    except socket.herror:\n",
     "        break"
    ]
@@ -1101,22 +1110,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import csv"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('urls.csv', 'w', newline='') as myfile:\n",
     "     wr = csv.writer(myfile, quoting=csv.QUOTE_ALL)\n",
-    "     wr.writerow(urls)"
+    "     wr.writerow(urls) #write to disk"
    ]
   }
  ],
