--- a/report/main.tex
+++ b/report/main.tex
@@ -34,7 +34,7 @@
 \clearpage
 	
 \addcontentsline{toc}{section}{References}
-\begin{thebibliography}{4}
+\begin{thebibliography}{8}
 
 	\bibitem{rippled}
 	rippled
@@ -57,15 +57,22 @@
 	\bibitem{MindYourCredit}
 	Pedro Moreno-Sanchez, Navin Modi, Raghuvir Songhela, Aniket Kate, Sonia Fahmy : Mind Your Credit
 	\\\path{https://www.cs.purdue.edu/homes/pmorenos/public/ripple-study-www.pdf}
-
-	\bibitem{ListeningtoWhispersofRipple}
-	Pedro Moreno-Sanchez, Muhammad Bilal Zafar, and Aniket Kate : Listening to Whispers of Ripple
-	\\\path{https://petsymposium.org/2016/files/papers/Listening_to_Whispers_of_Ripple__Linking_Wallets_and_Deanonymizing_Transactions_in_the_Ripple_Network.pdf}
 	
 	\bibitem{wipple}
 	Know your gateway
 	\\\path{https://wipple.devnull.network/research/gateways.html}
 	Dev Null Productions LLC 2018-2019
+	
+	\bibitem{repo}
+	student\_19\_ripple-locality
+	\\\path{https://github.com/dedis/student_19_ripple-locality}
+	DEDIS lab. 2019
+	
+	\bibitem{ListeningtoWhispersofRipple}
+	Pedro Moreno-Sanchez, Muhammad Bilal Zafar, and Aniket Kate : Listening to Whispers of Ripple
+	\\\path{https://petsymposium.org/2016/files/papers/Listening_to_Whispers_of_Ripple__Linking_Wallets_and_Deanonymizing_Transactions_in_the_Ripple_Network.pdf}
+	
+
 \end{thebibliography}
 
 \end{document}
