--- a/ripple_analysis/notebooks/ripple-transactions-jan-2013-dec-2016.ipynb
+++ b/ripple_analysis/notebooks/ripple-transactions-jan-2013-dec-2016.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Look at the file ripple-transactions-jan-2013-dec-2016"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,16 +25,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv('ripple-transactions-jan-2013-dec-2016.txt', header = None, names = [\"hash\", \"sender\", \"receiver\", \"currency\",\"amount1\",\"amount2\",\"ledger\",\"sourceTag\",\"DestinationTag\",\"9\",\"10\"])"
+    "data = pd.read_csv('../data/transactions/original/ripple-transactions-jan-2013-dec-2016.txt', header = None, names = [\"hash\", \"sender\", \"receiver\", \"currency\",\"amount1\",\"amount2\",\"ledger\",\"sourceTag\",\"DestinationTag\",\"9\",\"10\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +176,7 @@
        "4  1401681860  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +303,7 @@
        "24053310  1472360631  "
       ]
      },
-     "execution_count": 71,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +381,7 @@
        "24053310  1472360631  "
       ]
      },
-     "execution_count": 72,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1528,7 +1535,7 @@
        "[27406875 rows x 10 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1539,11 +1546,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv('ripple-transactions-jan-2013-dec-2016.csv')"
+    "data.to_csv('../data/transactions/ripple-transactions-jan-2013-dec-2016.csv')"
    ]
   }
  ],
