--- a/report/next.tex
+++ b/report/next.tex
@@ -1,5 +1,5 @@
 \section{Further work}
-To gain further information about localization of ripple transactions, it could be a good starting point to try to run rippled servers. As we explained in part 3.1.3, with good advertisement it might be possible to have clients connecting to those nodes.
+To gain further information about localization of ripple transactions, it could be a good starting point to try to run rippled servers. As we explained in part 3.1.3, with good advertisement it might be possible to have clients connecting to those nodes. Running a gateway might also be good approach
 
 In the analysis of the evolution of credit lines, we have found wallets that are not referenced as gateways in the API that appears as last hops of transactions. It could be a good idea to investigate further on those wallets they might turn out to be useful.
 
