--- a/report/conclusion.tex
+++ b/report/conclusion.tex
@@ -1,4 +1,4 @@
 \section{Conclusion}
 We tried different approaches to estimate if there is locality in Ripple transactions. We first tried to look at rippled nodes, unfortunately, we were not able to gain much information about the locality of transactions. 
 
-After those setbacks, we looked at the data we had about transactions. The results were more promising here. We have found that cross-currency payments do not seem really developed and that gateway tends to specialize. With our assumption that users use their local currency, it seems that the closer people are the more there are susceptible to interact in the ripple network. That the finest analyses we can get so far with the information we have. This work highlights the efforts from Ripple to make transactions and wallet owners unidentifiable.
+After those setbacks, we looked at the data we had about transactions. The results were more promising here. We have found that cross-currency payments do not seem really developed and that gateway tends to specialize. With our assumption that users use their local currency, it seems that the closer people are the more there are susceptible to interact in the Ripple network. That the finest analyses we can get so far with the information we have. This work highlights the efforts from Ripple to make transactions and wallet owners unidentifiable.
