--- a/report/limitations.tex
+++ b/report/limitations.tex
@@ -1,3 +1,5 @@
 \section{Limitations}
-We could come up with the result that there is some locality in ripple transactions, unfortunately, our analysis is not really precise. It is hard to map a given wallet to a position in the world.
-The limitations that stood in front of us where actually the protocol that is used by Ripple, since in the transaction data we only have a wallet identifier, no IP address or any information that could help us to link a wallet to a position. It is really hard to de-anonymize or get any personally identifiable information about the ripple wallets given how the transactions are propagated.
+We could come up with the result that there is some locality in Ripple transactions, unfortunately, our analysis is not really precise. It is hard to map a given wallet to a position in the world.
+The limitations that stood in front of us where actually the protocol that is used by Ripple, since in the transaction data we only have a wallet identifier, no IP address or any information that could help us to link a wallet to a position. 
+We also tried to run a gateway but due to the induced cost and financial regulations, it was not possible.
+It is really hard to de-anonymize or get any personally identifiable information about the Ripple wallets given how the transactions are propagated.
