--- a/report/intro.tex
+++ b/report/intro.tex
@@ -3,3 +3,6 @@
 %%% Motivation
 
 We already know that economic activity is strongly correlated with distance: the closer two companies are, the higher the flow of transactions between them (all else equal). The question is, do blockchain transactions show the same pattern? We base our work on the Ripple blockchain to investigate the answer to this question.
+\vspace{\baselineskip}
+
+In section 2 we present some background about Ripple. Our work is described in section 3. The limitations of our work are explained in the next section. Finally, we give a conclusion and further steps in section 5 and 6. Section 7 explains how to reproduce results.
